<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.emergent.javaformat</groupId>
    <artifactId>emergent-java-format-parent</artifactId>
    <version>3.0.0-SNAPSHOT</version>
  </parent>

  <artifactId>java-format</artifactId>

  <properties>
    <mainClass>com.palantir.javaformat.java.Main</mainClass>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>${maven.compiler.source}</maven.compiler.target>
    <nativeImageName>emergent-java-format-${os.name}_${os.arch}</nativeImageName>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <!--<localTestRepositoryPath>${maven.multiModuleProjectDirectory}/target/testrepo</localTestRepositoryPath>-->
    <!--<version.auto-value>1.11.1</version.auto-value>-->
    <!--<version.derive4j>1.1.1</version.derive4j>-->
    <!--<version.graalvm>23.0.2</version.graalvm>-->
    <!--<version.immutables>2.12.1</version.immutables>-->
    <!--<version.slf4j>2.0.17</version.slf4j>-->
  </properties>

  <build>
    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <excludes>
          <exclude>META-INF/native-image/proxy-config.json</exclude>
        </excludes>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <compilerArgs>
            <arg>--add-exports=jdk.compiler/com.sun.source.tree=ALL-UNNAMED</arg>
            <arg>--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
            <arg>--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
            <arg>--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
            <arg>--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
            <arg>--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
            <arg>--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
          </compilerArgs>
          <annotationProcessorPaths>
            <path>
              <groupId>com.google.auto.value</groupId>
              <artifactId>auto-value</artifactId>
              <version>${version.auto-value}</version>
            </path>
            <path>
              <groupId>org.derive4j</groupId>
              <artifactId>derive4j</artifactId>
              <version>${version.derive4j}</version>
            </path>
            <path>
              <groupId>org.immutables</groupId>
              <artifactId>value</artifactId>
              <version>${version.immutables}</version>
            </path>
          </annotationProcessorPaths>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <configuration>
          <archive>
            <manifest>
              <addClasspath>true</addClasspath>
              <mainClass>org.emergent.javaformat.java.Main</mainClass>
            </manifest>
          </archive>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-toolchains-plugin</artifactId>
        <executions>
          <!--
          <execution>
            <id>display-jdk-toolchains</id>
            <goals>
              <goal>display-discovered-jdk-toolchains</goal>
            </goals>
            <phase>validate</phase>
          </execution>
          -->
          <!--
          <execution>
            <goals>
              <goal>select-jdk-toolchain</goal>
            </goals>
            <configuration>
              <version>[21,22)</version>
            </configuration>
          </execution>
          -->
        </executions>
      </plugin>
    </plugins>
  </build>

  <dependencies>
    <dependency>
      <groupId>org.jspecify</groupId>
      <artifactId>jspecify</artifactId>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-params</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-core</artifactId>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.datatype</groupId>
      <artifactId>jackson-datatype-jdk8</artifactId>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.module</groupId>
      <artifactId>jackson-module-parameter-names</artifactId>
    </dependency>
    <dependency>
      <groupId>com.google.auto.service</groupId>
      <artifactId>auto-service</artifactId>
    </dependency>
    <dependency>
      <groupId>com.google.auto.service</groupId>
      <artifactId>auto-service-annotations</artifactId>
    </dependency>
    <dependency>
      <groupId>com.google.code.findbugs</groupId>
      <artifactId>jsr305</artifactId>
    </dependency>
    <dependency>
      <groupId>com.google.errorprone</groupId>
      <artifactId>error_prone_annotations</artifactId>
    </dependency>
    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
    </dependency>
    <dependency>
      <groupId>org.derive4j</groupId>
      <artifactId>derive4j-annotation</artifactId>
    </dependency>
    <dependency>
      <groupId>org.emergent.javaformat</groupId>
      <artifactId>emergent-java-format-spi</artifactId>
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <groupId>org.functionaljava</groupId>
      <artifactId>functionaljava</artifactId>
    </dependency>
    <dependency>
      <groupId>org.immutables</groupId>
      <artifactId>value</artifactId>
    </dependency>
    <dependency>
      <groupId>com.google.truth</groupId>
      <artifactId>truth</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-simple</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <profiles>
    <profile>
      <id>native</id>
      <properties>
        <nativeArtifactFilename>emergent-java-format-native</nativeArtifactFilename>
      </properties>
      <build>
        <pluginManagement>
          <plugins>
            <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-surefire-plugin</artifactId>
              <configuration>
                <environmentVariables>
                  <NATIVE_IMAGE_CLASSPATH>${project.build.directory}/${nativeArtifactFilename}</NATIVE_IMAGE_CLASSPATH>
                </environmentVariables>
              </configuration>
            </plugin>
          </plugins>
        </pluginManagement>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-toolchains-plugin</artifactId>
            <executions>
              <execution>
                <goals>
                  <goal>select-jdk-toolchain</goal>
                </goals>
                <configuration>
                  <version>[23)</version>
                  <vendor>GraalVM Community</vendor>
                </configuration>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.graalvm.buildtools</groupId>
            <artifactId>native-maven-plugin</artifactId>
            <version>0.11.6-SNAPSHOT</version>
            <extensions>true</extensions>
            <executions>
              <execution>
                <id>build-native</id>
                <goals>
                  <goal>compile-no-fork</goal>
                </goals>
                <phase>package</phase>
                <configuration>
                  <verbose>true</verbose>
                  <fallback>false</fallback>
                  <enforceToolchain>true</enforceToolchain>
                  <mainClass>${mainClass}</mainClass>
                  <imageName>${nativeImageName}</imageName>
                  <configFiles>
                    <configFile>${project.basedir}/src/main/resources/META-INF/native-image</configFile>
                  </configFiles>
                  <buildArgs>
                    <buildArg>-H:+UnlockExperimentalVMOptions</buildArg>
                    <buildArg>-H:+IncludeAllLocales</buildArg>
                    <buildArg>-H:+ReportExceptionStackTraces</buildArg>
                    <buildArg>-H:-UseContainerSupport</buildArg>
                    <buildArg>-march=compatibility</buildArg>
                    <buildArg>--exact-reachability-metadata</buildArg>
                    <buildArg>--initialize-at-build-time=com.sun.tools.javac.file.Locations</buildArg>
                  </buildArgs>
                  <jvmArgs>
                    <jvmArg>--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</jvmArg>
                    <jvmArg>--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</jvmArg>
                    <jvmArg>--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</jvmArg>
                    <jvmArg>--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</jvmArg>
                    <jvmArg>--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</jvmArg>
                    <jvmArg>--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</jvmArg>
                    <jvmArg>--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</jvmArg>
                  </jvmArgs>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

</project>
